--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
     }
   </style>
 </head>
+
 <body class="min-h-screen flex flex-col items-center justify-center text-white">
 
   <!-- Setup Modal -->
   <div id="modal-backdrop" class="fixed inset-0 bg-black bg-opacity-40 z-40"></div>
-  <div id="setup-modal" class="bg-gray-800 text-white fixed z-50 rounded-lg shadow-lg p-6 sm:p-8 max-w-md w-full mx-4 top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
+  <div id="setup-modal" class="bg-gray-800 text-white fixed z-50 rounded-lg shadow-lg p-6 sm:p-8 w-[90%] max-w-md top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
     <button id="setup-close" aria-label="Close Setup Modal" class="absolute top-0 right-0 mt-2 mr-2 text-white text-xl font-bold focus:outline-none">&times;</button>
     <h2 class="text-xl font-bold mb-4">Setup</h2>
     <label for="level-select" class="block font-semibold mb-1">Select Your Division</label>
@@ -41,19 +42,28 @@
     <button id="setup-confirm" class="w-full bg-green-600 hover:bg-green-700 text-white font-bold py-2 rounded">Start Debate</button>
   </div>
 
-  <!-- Responsibilities Toggle Button -->
-  <button id="responsibilities-toggle" class="fixed top-16 right-4 bg-blue-600 text-white px-4 py-2 rounded shadow z-50 flex items-center space-x-2">
-    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-white" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-      <path fill-rule="evenodd" d="M18 10A8 8 0 11 2 10a8 8 0 0116 0zM11 8a1 1 0 10-2 0 1 1 0 002 0zm-1 2a1 1 0 00-.993.883L9 11v3a1 1 0 001.993.117L11 14v-3a1 1 0 00-1-1z" clip-rule="evenodd" />
-    </svg>
-    <span>Coach Tips</span>
-  </button>
+  <!-- Top Controls: Coach Tips + Division/Role -->
+  <div id="top-controls" class="absolute top-20 right-4 flex flex-row gap-2 z-50">
+    <button id="responsibilities-toggle" class="bg-blue-600 text-white px-4 py-2 rounded shadow flex items-center space-x-2">
+      <!-- Solid Information Circle Icon (Heroicons) -->
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-white" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+        <path fill-rule="evenodd" d="M18 10A8 8 0 11 2 10a8 8 0 0116 0zM11 8a1 1 0 10-2 0 1 1 0 002 0zm-1 2a1 1 0 00-.993.883L9 11v3a1 1 0 001.993.117L11 14v-3a1 1 0 00-1-1z" clip-rule="evenodd" />
+      </svg>
+      <span>Coach Tips</span>
+    </button>
+    <!-- the Division | Role button will be appended here by JS -->
+  </div>
 
   <!-- Responsibilities Panel -->
-  <div id="responsibilities-panel" class="fixed top-0 right-0 w-full sm:w-80 h-full bg-gray-800 text-white shadow-lg transform translate-x-full transition-transform duration-300 z-50 overflow-y-auto">
+  <div id="responsibilities-panel" class="fixed top-0 right-0 w-1/2 h-full bg-gray-900 border-l border-gray-600 text-white shadow-lg transform translate-x-full transition-transform duration-300 z-50 overflow-y-auto">
     <div class="p-6 relative">
       <button id="close-responsibilities" aria-label="Close Responsibilities Panel" class="absolute top-0 right-0 mt-2 mr-2 text-white text-xl font-bold focus:outline-none">&times;</button>
-      <h3 class="text-lg font-bold mb-4 mt-2">Coach Tips</h3>
+      <h1 class="text-2xl font-bold mb-4 mt-2 text-cyan-400 flex items-center space-x-2">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-cyan-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+          <path fill-rule="evenodd" d="M18 10A8 8 0 11 2 10a8 8 0 0116 0zM11 8a1 1 0 10-2 0 1 1 0 002 0zm-1 2a1 1 0 00-.993.883L9 11v3a1 1 0 001.993.117L11 14v-3a1 1 0 00-1-1z" clip-rule="evenodd" />
+        </svg>
+        <span>Coach Tips</span>
+      </h1>
       <ul id="responsibilities-list" class="list-disc pl-5"></ul>
     </div>
   </div>
